--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.4",
         "livewire/volt": "^1.0",
-        "wireui/wireui": "^1.19"
+        "wireui/wireui": "^1.19",
+        "ext-http": "*"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
